Completed calculator project with all core and bonus features

--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
 </head>
 
 <body>
-    <main>
+    <main class="main">
+        <button class="Night-Mode">🌠Night Mode</button>
         <div class="calculator-wrapper">
             <div class="display-container">
-                <span class="input"></span><br>
-                <span class="result"></span>
+                <input type="text" placeholder="0" class="input">
             </div>
             <div class="base-container">
-                <button>AC</button>
-                <button>DEL</button>
-                <button>%</button>
-                <button>÷</button>
+                <button class="special">AC</button>
+                <button class="special">DEL</button>
+                <button class="special">%</button>
+                <button class="special">÷</button>
                 <button>7</button>
                 <button>8</button>
                 <button>9</button>
-                <button>x</button>
+                <button class="special">*</button>
                 <button>4</button>
                 <button>5</button>
                 <button>6</button>
-                <button>-</button>
+                <button class="special">-</button>
                 <button>1</button>
                 <button>2</button>
                 <button>3</button>
-                <button>+</button>
+                <button class="special">+</button>
                 <button>√</button>
                 <button>0</button>
                 <button>.</button>
-                <button>=</button>
+                <button class="equal">=</button>
             </div>
         </div>
 
