Final version of Calculator – root removed, all other features implemented

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <main class="main">
-        <button class="Night-Mode">🌠Night Mode</button>
+        <button class="Night-Mode">🌠Switch to Night Mode</button>
         <div class="calculator-wrapper">
             <div class="display-container">
                 <input type="text" placeholder="0" class="input">
@@ -33,7 +33,7 @@
                 <button>2</button>
                 <button>3</button>
                 <button class="special">+</button>
-                <button>√</button>
+                <button>00</button>
                 <button>0</button>
                 <button>.</button>
                 <button class="equal">=</button>
