--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <button>7</button>
                 <button>8</button>
                 <button>9</button>
-                <button class="special">*</button>
+                <button class="special">x</button>
                 <button>4</button>
                 <button>5</button>
                 <button>6</button>
